--- a/Project/Text Manipulation/Basic Pre-Processing.ipynb
+++ b/Project/Text Manipulation/Basic Pre-Processing.ipynb
@@ -133,16 +133,16 @@
     {
      "data": {
       "text/plain": [
-       "malmène     1\n",
-       "seamos      1\n",
-       "causin      1\n",
-       "tendency    1\n",
-       "ia          1\n",
-       "vibrolux    1\n",
-       "firda       1\n",
-       "докосвай    1\n",
-       "golpe       1\n",
-       "amped       1\n",
+       "autres        1\n",
+       "reporting     1\n",
+       "binningham    1\n",
+       "menneet       1\n",
+       "likkle        1\n",
+       "dueña         1\n",
+       "namesake      1\n",
+       "oprah         1\n",
+       "earrings      1\n",
+       "capisci       1\n",
        "dtype: int64"
       ]
      },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
@@ -208,13 +208,13 @@
       "text/plain": [
        "0                                         instrumental\n",
        "1    time rain parade watch hopes explode landmines...\n",
-       "2    who coming stairs shouting coming dying sick d...\n",
-       "3    life merry go round painted horses riding musi...\n",
+       "2    who coming stairs shouting in coming dying lik...\n",
+       "3    life like merry go round painted horses riding...\n",
        "4                                         instrumental\n",
        "Name: Lyrics, dtype: object"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,50 +225,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                                           instrument\n",
-       "1    time rain parad watch hope explod landmin ask ...\n",
-       "2    who come stair shout come die sick disgust wis...\n",
-       "3    life merri go round paint hor ride music take ...\n",
-       "4                                           instrument\n",
-       "Name: Lyrics, dtype: object"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Stemming is basically removing the 'ly' or 'ing' from the end of the words....\n",
-    "from nltk.stem import PorterStemmer\n",
-    "st = PorterStemmer()\n",
-    "train['Lyrics'] = train['Lyrics'].apply(lambda x: \" \".join([st.stem(word) for word in x.split()]))\n",
-    "train['Lyrics'].head()"
+    "# #Stemming is basically removing the 'ly' or 'ing' from the end of the words....\n",
+    "# from nltk.stem import PorterStemmer\n",
+    "# st = PorterStemmer()\n",
+    "# train['Lyrics'] = train['Lyrics'].apply(lambda x: \" \".join([st.stem(word) for word in x.split()]))\n",
+    "# train['Lyrics'].head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0                                           instrument\n",
-       "1    time rain parad watch hope explod landmin ask ...\n",
-       "2    who come stair shout come die sick disgust wis...\n",
-       "3    life merri go round paint hor ride music take ...\n",
-       "4                                           instrument\n",
+       "0                                         instrumental\n",
+       "1    time rain parade watch hope explode landmines ...\n",
+       "2    who coming stair shouting in coming dying like...\n",
+       "3    life like merry go round painted horse riding ...\n",
+       "4                                         instrumental\n",
        "Name: Lyrics, dtype: object"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -321,23 +307,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>instrument</td>\n",
+       "      <td>instrumental</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>time rain parad watch hope explod landmin ask ...</td>\n",
+       "      <td>time rain parade watch hope explode landmines ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>who come stair shout come die sick disgust wis...</td>\n",
+       "      <td>who coming stair shouting in coming dying like...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>life merri go round paint hor ride music take ...</td>\n",
+       "      <td>life like merry go round painted horse riding ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>instrument</td>\n",
+       "      <td>instrumental</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -345,14 +331,14 @@
       ],
       "text/plain": [
        "                                              Lyrics\n",
-       "0                                         instrument\n",
-       "1  time rain parad watch hope explod landmin ask ...\n",
-       "2  who come stair shout come die sick disgust wis...\n",
-       "3  life merri go round paint hor ride music take ...\n",
-       "4                                         instrument"
+       "0                                       instrumental\n",
+       "1  time rain parade watch hope explode landmines ...\n",
+       "2  who coming stair shouting in coming dying like...\n",
+       "3  life like merry go round painted horse riding ...\n",
+       "4                                       instrumental"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,11 +349,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('pre_processed_lyrics.csv', index = False)"
+    "df.to_csv('pre_processed_lyrics(new).csv', index = False)"
    ]
   },
   {
