--- a/Project/Text Manipulation/Final Processing.ipynb
+++ b/Project/Text Manipulation/Final Processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "train = pd.read_csv('pre_processed_lyrics.csv')"
+    "train = pd.read_csv('pre_processed_lyrics(new).csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -87,23 +87,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>instrument</td>\n",
+       "      <td>instrumental</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>time rain parad watch hope explod landmin ask ...</td>\n",
+       "      <td>time rain parade watch hope explode landmines ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>who come stair shout come die sick disgust wis...</td>\n",
+       "      <td>who coming stair shouting in coming dying like...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>life merri go round paint hor ride music take ...</td>\n",
+       "      <td>life like merry go round painted horse riding ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>instrument</td>\n",
+       "      <td>instrumental</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -111,14 +111,14 @@
       ],
       "text/plain": [
        "                                              Lyrics\n",
-       "0                                         instrument\n",
-       "1  time rain parad watch hope explod landmin ask ...\n",
-       "2  who come stair shout come die sick disgust wis...\n",
-       "3  life merri go round paint hor ride music take ...\n",
-       "4                                         instrument"
+       "0                                       instrumental\n",
+       "1  time rain parade watch hope explode landmines ...\n",
+       "2  who coming stair shouting in coming dying like...\n",
+       "3  life like merry go round painted horse riding ...\n",
+       "4                                       instrumental"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -183,27 +183,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>instrument</td>\n",
+       "      <td>instrumental</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>time rain parad watch hope explod landmin ask ...</td>\n",
-       "      <td>0.020455</td>\n",
+       "      <td>time rain parade watch hope explode landmines ...</td>\n",
+       "      <td>0.325000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>who come stair shout come die sick disgust wis...</td>\n",
-       "      <td>-0.088095</td>\n",
+       "      <td>who coming stair shouting in coming dying like...</td>\n",
+       "      <td>-0.273214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>life merri go round paint hor ride music take ...</td>\n",
-       "      <td>-0.105000</td>\n",
+       "      <td>life like merry go round painted horse riding ...</td>\n",
+       "      <td>-0.187500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>instrument</td>\n",
+       "      <td>instrumental</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -212,14 +212,14 @@
       ],
       "text/plain": [
        "                                              Lyrics  sentiment\n",
-       "0                                         instrument   0.000000\n",
-       "1  time rain parad watch hope explod landmin ask ...   0.020455\n",
-       "2  who come stair shout come die sick disgust wis...  -0.088095\n",
-       "3  life merri go round paint hor ride music take ...  -0.105000\n",
-       "4                                         instrument   0.000000"
+       "0                                       instrumental   0.000000\n",
+       "1  time rain parade watch hope explode landmines ...   0.325000\n",
+       "2  who coming stair shouting in coming dying like...  -0.273214\n",
+       "3  life like merry go round painted horse riding ...  -0.187500\n",
+       "4                                       instrumental   0.000000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -264,27 +264,27 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>instrument</td>\n",
+       "      <td>instrumental</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>time rain parad watch hope explod landmin ask ...</td>\n",
-       "      <td>0.020455</td>\n",
+       "      <td>time rain parade watch hope explode landmines ...</td>\n",
+       "      <td>0.325000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>who come stair shout come die sick disgust wis...</td>\n",
-       "      <td>-0.088095</td>\n",
+       "      <td>who coming stair shouting in coming dying like...</td>\n",
+       "      <td>-0.273214</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>life merri go round paint hor ride music take ...</td>\n",
-       "      <td>-0.105000</td>\n",
+       "      <td>life like merry go round painted horse riding ...</td>\n",
+       "      <td>-0.187500</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>instrument</td>\n",
+       "      <td>instrumental</td>\n",
        "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -293,14 +293,14 @@
       ],
       "text/plain": [
        "                                              Lyrics  sentiment\n",
-       "0                                         instrument   0.000000\n",
-       "1  time rain parad watch hope explod landmin ask ...   0.020455\n",
-       "2  who come stair shout come die sick disgust wis...  -0.088095\n",
-       "3  life merri go round paint hor ride music take ...  -0.105000\n",
-       "4                                         instrument   0.000000"
+       "0                                       instrumental   0.000000\n",
+       "1  time rain parade watch hope explode landmines ...   0.325000\n",
+       "2  who coming stair shouting in coming dying like...  -0.273214\n",
+       "3  life like merry go round painted horse riding ...  -0.187500\n",
+       "4                                       instrumental   0.000000"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
